陈德华的www.xnnye.cn|www.adehua.com阿里云自动部署

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="desc">{{title2}}</div>
             <div class="other clear">
                 <em class="clear">{{cate_name}}</em>
-                <em class="clear">{{updatetime}}</em>
+                <em class="clear">{{inputtime}}</em>
                 <span class="clear">赞</span>
             </div>
         </a>
