陈德华的www.xnnye.cn|www.adehua.com阿里云自动部署

--- a/show.html
+++ b/show.html
@@ -184,6 +184,7 @@
                     down.children("div").eq(1).children(".em").children("em").text(ondown.down.inputtime);
                     down.children("div").eq(1).children(".em").children("span").eq(0).text(ondown.on.cate_name);
                     down.children("div").eq(1).children("h2").text(ondown.down.title);
+                    down.children("div").eq(0).children("img").attr("src", ondown.down.image);
                     down.show();
                 }
                 //最热门的6条数据
